--- a/src/ui/preferences.ui
+++ b/src/ui/preferences.ui
@@ -1,25 +1,26 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author/>
- <comment/>
- <exportmacro/>
  <class>Preferences</class>
  <widget class="QDialog" name="Preferences">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>652</width>
+    <height>446</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Preferences</string>
+  </property>
+  <property name="modal">
+   <bool>true</bool>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>240</y>
+     <x>300</x>
+     <y>410</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -31,8 +32,137 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
+  <widget class="QGroupBox" name="grpDataDirectory">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>30</y>
+     <width>611</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>Profile directory</string>
+   </property>
+   <widget class="QPushButton" name="btnBrowseProfileDir">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>50</y>
+      <width>75</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Browse</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="_txtProfileDirectory">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>50</y>
+      <width>501</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="clearButtonEnabled">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>14</x>
+      <y>26</y>
+      <width>491</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Set the profile directory where application settings and cache is stored.</string>
+    </property>
+   </widget>
+   <zorder>btnBrowseProfileDir</zorder>
+   <zorder>_txtProfileDirectory</zorder>
+   <zorder>_txtProfileDirectory</zorder>
+   <zorder>label</zorder>
+  </widget>
+  <widget class="QGroupBox" name="grpCoordinateType">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>130</y>
+     <width>611</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>Coordinate Type</string>
+   </property>
+   <widget class="QRadioButton" name="rdoDecimal">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>82</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Decimal</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="rdoDegrees">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>30</y>
+      <width>82</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Degrees</string>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>50</y>
+      <width>161</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>12.345678, 123.456789</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>50</y>
+      <width>161</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>40° 26′ 46″ N 79° 58′ 56″ W</string>
+    </property>
+   </widget>
+  </widget>
  </widget>
- <pixmapfunction/>
  <resources/>
  <connections>
   <connection>
@@ -67,5 +197,24 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>btnBrowseProfileDir</sender>
+   <signal>clicked()</signal>
+   <receiver>Preferences</receiver>
+   <slot>browseProfileDirectory()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>577</x>
+     <y>85</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>325</x>
+     <y>222</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
+ <slots>
+  <slot>browseProfileDirectory()</slot>
+ </slots>
 </ui>
