Finished writing the Json serialiser for the FootstepConfig classes. Wired up the preferences screen to show the configuration values.

--- a/src/ui/preferences.ui
+++ b/src/ui/preferences.ui
@@ -86,10 +86,6 @@
      <string>Set the profile directory where application settings and cache is stored.</string>
     </property>
    </widget>
-   <zorder>btnBrowseProfileDir</zorder>
-   <zorder>_txtProfileDirectory</zorder>
-   <zorder>_txtProfileDirectory</zorder>
-   <zorder>label</zorder>
   </widget>
   <widget class="QGroupBox" name="grpCoordinateType">
    <property name="geometry">
@@ -103,7 +99,7 @@
    <property name="title">
     <string>Coordinate Type</string>
    </property>
-   <widget class="QRadioButton" name="rdoDecimal">
+   <widget class="QRadioButton" name="_rdoDecimal">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -119,10 +115,10 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QRadioButton" name="rdoDegrees">
+   <widget class="QRadioButton" name="_rdoDegrees">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>310</x>
       <y>30</y>
       <width>82</width>
       <height>17</height>
@@ -151,7 +147,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>310</x>
       <y>50</y>
       <width>161</width>
       <height>16</height>
@@ -159,6 +155,140 @@
     </property>
     <property name="text">
      <string>40° 26′ 46″ N 79° 58′ 56″ W</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QGroupBox" name="grpMapTileCacheType">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>220</y>
+     <width>611</width>
+     <height>171</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>Map Caching</string>
+   </property>
+   <widget class="QRadioButton" name="_rdoDiskMemoryCache">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>141</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Disk and memory cache</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="_rdoNoCache">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>30</y>
+      <width>82</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>No cache</string>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>50</y>
+      <width>281</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Caches all map tiles from the server for the specified amount of time. The map loads existing tiles quicker, but the times could be slightly out of date.</string>
+    </property>
+    <property name="scaledContents">
+     <bool>false</bool>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+    <property name="margin">
+     <number>0</number>
+    </property>
+    <property name="indent">
+     <number>1</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>50</y>
+      <width>281</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Tiles are always downloaded from the server. Uses more bandwidth and map may load slower, but tiles are always up to date.</string>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+    <property name="indent">
+     <number>0</number>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="_spnCacheExpiry">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>130</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+    <property name="maximum">
+     <number>999</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>130</y>
+      <width>47</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Days</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>110</y>
+      <width>101</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Cache Expiry</string>
+    </property>
+    <property name="indent">
+     <number>0</number>
     </property>
    </widget>
   </widget>
